--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,6 +22,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "sass": "^1.77.8",
+    "stripe": "^16.8.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
